--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
+    "redux-localstorage-simple": "^2.4.0",
     "sass": "^1.32.11",
     "web-vitals": "^1.1.1"
   },
